@@ -1,11 +1,38 @@
 # NAME
 
-Test::Spelling - check for spelling errors in POD files
+Test::Spelling - Check for spelling errors in POD files
 
 # SYNOPSIS
 
+Place a file, `pod-spell.t` in your distribution's `xt/author` directory:
+
 ```perl
+use strict;
+use warnings;
 use Test::More;
+
+use Test::Spelling;
+use Pod::Wordlist;
+
+set_spell_cmd('hunspell -l');
+add_stopwords(<DATA>);
+all_pod_files_spelling_ok( qw( bin lib ) );
+
+__DATA__
+SomeBizarreWord
+YetAnotherBIzarreWord
+```
+
+Or, you can gate the spelling test:
+
+```perl
+use strict;
+use warnings;
+use Test::More;
+
+use Test::Spelling;
+use Pod::Wordlist;
+
 BEGIN {
     plan skip_all => "Spelling tests only for authors"
         unless -d 'inc/.author';
@@ -17,9 +44,10 @@ all_pod_files_spelling_ok();
 
 # DESCRIPTION
 
-`Test::Spelling` lets you check the spelling of a POD file, and report
-its results in standard `Test::More` fashion. This module requires a
-spellcheck program such as `spell`, `aspell`, `ispell`, or `hunspell`.
+[Test::Spelling](https://metacpan.org/pod/Test::Spelling) lets you check the spelling of a `POD` file, and report
+its results in standard [Test::More](https://metacpan.org/pod/Test::More) fashion. This module requires a
+spellcheck program such as [Hunspell](http://hunspell.github.io/),
+`aspell`, `spell`, or, `ispell`. We suggest using Hunspell.
 
 ```perl
 use Test::Spelling;
@@ -32,9 +60,9 @@ environment. There is no way of predicting whether the word list or spellcheck
 program used will give the same results. You **can** include the test in your
 distribution, but be sure to run it only for authors of the module by guarding
 it in a `skip_all unless -d 'inc/.author'` clause, or by putting the test in
-your distribution's `xt/` directory. Anyway, people installing your module
+your distribution's `xt/author` directory. Anyway, people installing your module
 really do not need to run such tests, as it is unlikely that the documentation
-will acquire typos while in transit. :-)
+will acquire typos while in transit.
 
 You can add your own stop words, which are words that should be ignored by the
 spell check, like so:
@@ -63,43 +91,30 @@ Zakirov
 
 To maintain backwards compatibility, comment markers and some whitespace are
 ignored. In the near future, the preprocessing we do on the arguments to
-[add\_stopwords](https://metacpan.org/pod/add_stopwords) will be changed and documented properly.
+["add\_stopwords" in Test::Spelling](https://metacpan.org/pod/Test::Spelling#add_stopwords) will be changed and documented properly.
 
 # FUNCTIONS
 
-## all\_pod\_files\_spelling\_ok( \[@files/@directories\] )
+[Test::Spelling](https://metacpan.org/pod/Test::Spelling) makes the following methods available.
 
-Checks all the files for POD spelling. It gathers ["all\_pod\_files"](#all_pod_files) on each
-file/directory, and declares a ["plan" in Test::More](https://metacpan.org/pod/Test::More#plan) for you (one test for each
-file), so you must not call `plan` yourself.
+## add\_stopwords
 
-If `@files` is empty, the function finds all POD files in the `blib`
-directory if it exists, or the `lib` directory if it does not. A POD file is
-one that ends with `.pod`, `.pl`, `.plx`, or `.pm`; or any file where the
-first line looks like a perl shebang line.
+```
+add_stopwords(@words);
+add_stopwords(<DATA>); # pull in stop words from the DATA section
+```
 
-If there is no working spellchecker (determined by
-["has\_working\_spellchecker"](#has_working_spellchecker)), this test will issue a "skip all" directive.
+Add words that should be skipped by the spell checker. Note that [Pod::Spell](https://metacpan.org/pod/Pod::Spell)
+already skips words believed to be code, such as everything in verbatim
+(indented) blocks and code marked up with `` `...` ``, as well as some common
+Perl jargon.
 
-If you're testing a distribution, just create a `t/pod-spell.t` with the code
-in the ["SYNOPSIS"](#synopsis).
+## all\_pod\_files
 
-Returns true if every POD file has correct spelling, or false if any of them fail.
-This function will show any spelling errors as diagnostics.
-
-## pod\_file\_spelling\_ok( $filename\[, $testname \] )
-
-`pod_file_spelling_ok` will test that the given POD file has no spelling
-errors.
-
-When it fails, `pod_file_spelling_ok` will show any spelling errors as
-diagnostics.
-
-The optional second argument is the name of the test.  If it is
-omitted, `pod_file_spelling_ok` chooses a default test name "POD
-spelling for `$filename`".
-
-## all\_pod\_files( \[@dirs\] )
+```
+all_pod_files();
+all_pod_files(@list_of_directories);
+```
 
 Returns a list of all the Perl files in each directory and its subdirectories,
 recursively. If no directories are passed, it defaults to `blib` if `blib`
@@ -116,14 +131,49 @@ false are skipped. By default, this filter passes everything through.
 The order of the files returned is machine-dependent.  If you want them
 sorted, you'll have to sort them yourself.
 
-## add\_stopwords(@words)
+## all\_pod\_files\_spelling\_ok
 
-Add words that should be skipped by the spellcheck. Note that [Pod::Spell](https://metacpan.org/pod/Pod::Spell)
-already skips words believed to be code, such as everything in verbatim
-(indented) blocks and code marked up with `` `...` ``, as well as some common
-Perl jargon.
+```
+all_pod_files_spelling_ok(@list_of_files);
+all_pod_files_spelling_ok(@list_of_directories);
+```
+
+Checks all the files for `POD` spelling. It gathers
+["all\_pod\_files" in Test::Spelling](https://metacpan.org/pod/Test::Spelling#all_pod_files) on each file/directory, and
+declares a ["plan" in Test::More](https://metacpan.org/pod/Test::More#plan) for you (one test for each file), so you
+must not call `plan` yourself.
+
+If `@files` is empty, the function finds all `POD` files in the `blib`
+directory if it exists, or the `lib` directory if it does not. A `POD` file is
+one that ends with `.pod`, `.pl`, `.plx`, or `.pm`; or any file where the
+first line looks like a perl shebang line.
+
+If there is no working spellchecker (determined by
+[Test:Spelling/"has\_working\_spellchecker"](Test:Spelling/&#x22;has_working_spellchecker&#x22;)), this test will issue a
+`skip all` directive.
+
+If you're testing a distribution, just create an `xt/author/pod-spell.t` with the code
+in the ["SYNOPSIS"](#synopsis).
+
+Returns true if every `POD` file has correct spelling, or false if any of them fail.
+This function will show any spelling errors as diagnostics.
+
+## get\_pod\_parser
+
+```perl
+# a Pod::Spell -like object
+my $object = get_pod_parser();
+```
+
+Get the object we're using to parse the `POD`. A new [Pod::Spell](https://metacpan.org/pod/Pod::Spell) object
+should be used for every file. People providing custom parsers will have
+to do this themselves.
 
 ## has\_working\_spellchecker
+
+```perl
+my $cmd = has_working_spellchecker;
+```
 
 `has_working_spellchecker` will return `undef` if there is no working
 spellchecker, or a true value (the spellchecker command itself) if there is.
@@ -135,23 +185,27 @@ for you.
 A full list of spellcheckers which this method might test can be found in the
 source of the `spellchecker_candidates` method.
 
-## set\_spell\_cmd($command)
+## pod\_file\_spelling\_ok
 
-If you want to force this module to use a particular spellchecker, then you can
-specify which one with `set_spell_cmd`. This is useful to ensure a more
-consistent lexicon between developers, or if you have an unusual environment.
-Any command that takes text from standard input and prints a list of misspelled
-words, one per line, to standard output will do.
+```
+pod_file_spelling_ok('/path/to/Foo.pm');
+pod_file_spelling_ok('/path/to/Foo.pm', 'Foo is well spelled!');
+```
 
-## set\_pod\_file\_filter($code)
+`pod_file_spelling_ok` will test that the given `POD` file has no spelling
+errors.
 
-If your project has POD documents written in languages other than English, then
-obviously you don't want to be running a spellchecker on every Perl file.
-`set_pod_file_filter` lets you filter out files returned from
-["all\_pod\_files"](#all_pod_files) (and hence, the documents tested by
-["all\_pod\_files\_spelling\_ok"](#all_pod_files_spelling_ok)).
+When it fails, `pod_file_spelling_ok` will show any spelling errors as
+diagnostics.
+
+The optional second argument is the name of the test.  If it is
+omitted, `pod_file_spelling_ok` chooses a default test name
+`POD spelling for $filename`.
+
+## set\_pod\_file\_filter
 
 ```perl
+# code ref
 set_pod_file_filter(sub {
     my $filename = shift;
     return 0 if $filename =~ /_ja.pod$/; # skip Japanese translations
@@ -159,29 +213,51 @@ set_pod_file_filter(sub {
 });
 ```
 
-## set\_pod\_parser($object)
+If your project has `POD` documents written in languages other than English, then
+obviously you don't want to be running a spellchecker on every Perl file.
+`set_pod_file_filter` lets you filter out files returned from
+["all\_pod\_files"](#all_pod_files) (and hence, the documents tested by
+["all\_pod\_files\_spelling\_ok"](#all_pod_files_spelling_ok)).
+
+## set\_pod\_parser
+
+```perl
+my $object = Pod::Spell->new();
+set_pod_parser($object);
+```
 
 By default [Pod::Spell](https://metacpan.org/pod/Pod::Spell) is used to generate text suitable for spellchecking
 from the input POD.  If you want to use a different parser, perhaps a
 customized subclass of [Pod::Spell](https://metacpan.org/pod/Pod::Spell), call `set_pod_parser` with an object
 that is-a [Pod::Parser](https://metacpan.org/pod/Pod::Parser).  Be sure to create a fresh parser object for
-each file (don't use this with `all_pod_files_spelling_ok`).
+each file (don't use this with ["all\_pod\_files\_spelling\_ok"](#all_pod_files_spelling_ok)).
+
+## set\_spell\_cmd
+
+```
+set_spell_cmd('hunspell -l'); # current preferred
+set_spell_cmd('aspell list');
+set_spell_cmd('spell');
+set_spell_cmd('ispell -l');
+```
+
+If you want to force this module to use a particular spellchecker, then you can
+specify which one with `set_spell_cmd`. This is useful to ensure a more
+consistent lexicon between developers, or if you have an unusual environment.
+Any command that takes text from standard input and prints a list of misspelled
+words, one per line, to standard output will do.
 
 # SEE ALSO
 
 [Pod::Spell](https://metacpan.org/pod/Pod::Spell)
 
-# ORIGINAL AUTHOR
+# AUTHOR
 
 Ivan Tubert-Brohman `<itub@cpan.org>`
 
 Heavily based on [Test::Pod](https://metacpan.org/pod/Test::Pod) by Andy Lester and brian d foy.
 
-# MAINTAINER
-
-Shawn M Moore `<code@sartak.org>`
-
-# COPYRIGHT
+# COPYRIGHT & LICENSE
 
 Copyright 2005, Ivan Tubert-Brohman, All Rights Reserved.
 
