@@ -43,11 +43,11 @@ user    = genio
 skiptest = no_symlinks
 [Test::Version]
 [Test::Pod::Coverage::Configurable]
-trustme = Test::Spelling => qr/^(?:get_pod_parser|invalid_words_in|spellchecker_candidates)$/
+trustme = Test::Spelling => qr/^(?:invalid_words_in|spellchecker_candidates)$/
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
-spell_cmd = aspell list
+spell_cmd = hunspell -l
 stopword = CPAN
 stopword = github
 stopword = stopwords
